--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/compiler": "^13.3.1",
     "@angular/core": "^13.3.1",
     "@angular/elements": "^13.3.1",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "^13.3.1",
     "@angular/material": "13.3.1",
     "@angular/platform-browser": "^13.3.1",
