--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "popper.js": "1.16.1",
     "rxjs": "^7.5.5",
     "rxjs-compat": "6.6.7",
+    "tslib": "^2.3.1",
     "web-animations-js": "2.3.2",
     "zone.js": "~0.11.5"
   },
