--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
     "moment": "2.29.1",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ngx-toastr": "^14.3.0",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "^7.5.5",
     "rxjs-compat": "6.6.7",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "web-animations-js": "2.3.2",
     "zone.js": "~0.11.5"
   },
